# lfshare

./: .gitignore  Cargo.toml  README.md  flake.nix  workspace.kdl
src/: main.rs
