[package]
name = "lfshare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.19", features = ["derive"] }
local-ip-address = "0.5.6"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
